--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "matter-js": "^0.19.0",
+        "paper": "^0.12.17",
         "pathseg": "^1.2.1"
     }
 }
